second final change